<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AdminSignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageLogo"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:contentDescription="app_logo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEdtWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:ems="15"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwEdtWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEdtWrapper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:ems="15"
                android:hint="Password (Min. 6 characters)"
                android:inputType="textPassword"
                android:textColorHint="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/changePwVisibility"
            android:layout_width="30dp"
            android:layout_height="36dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/showpassword"
            app:layout_constraintBottom_toBottomOf="@+id/pwEdtWrapper"
            app:layout_constraintEnd_toEndOf="@+id/pwEdtWrapper"
            app:layout_constraintTop_toTopOf="@+id/pwEdtWrapper" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameEdtWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwEdtWrapper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:ems="15"
                android:hint="Username"
                android:inputType="text"
                android:textColorHint="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/adminSignUpKeyEdtWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameEdtWrapper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adminSignUpKeyEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:ems="15"
                android:hint="Authorisation Token"
                android:inputType="text"
                android:textColorHint="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signupBtn"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button"
            android:text="SIGN UP"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adminSignUpKeyEdtWrapper" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>