...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:textColor="#ec7423" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign up."
            android:textColor="#ec7423"
            android:textStyle="bold" />

...
